# Smart_Reaseach_Publication_Management

./: .gitignore  CMakeLists.txt  DATABASE_SETUP.md  EvaluationSystem.pro  SpyBot.qrc  SpyBot.qss  article.cpp  article.h  conference.cpp  conference.h  conference.ui  connection.cpp  connection.h  laboratoire.cpp  laboratoire.h  laboratoire.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowconfff.cpp  mainwindowconfff.h  mainwindowconfff.ui  publicationspage.cpp  publicationspage.h  publicationspage.ui  smart_publication_db.sql  statisticspage.cpp  statisticspage.h  statisticspage.ui  submission.cpp  submission.ui  tatus  users.cpp  users.h  users.ui  userspage.ui
.qtcreator/: CMakeLists.txt.user.087e10d  CMakeLists.txt.user.d83f896
Gestion_Soumission/: CMakeLists.txt  README.md  main.cpp  submission.cpp  submission.h  submission.ui
headers/: database.h  evaluation.h  evaluationformdialog.h  evaluationlistwindow.h  mainwindow.h  reviewer.h  reviewerwindow.h  statisticswindow.h
src/: database.cpp  evaluation.cpp  evaluationformdialog.cpp  evaluationlistwindow.cpp  main.cpp  mainwindow.cpp  reviewer.cpp  reviewerwindow.cpp  statisticswindow.cpp
ui/: evaluationformdialog.ui  evaluationlistwindow.ui  mainwindow.ui  reviewerwindow.ui  statisticswindow.ui
